--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Students</h1>
 
 <% @students.each do |student| %>
-  <p><%= student.name %></p>
+    <p><%= link_to student.first_name, student_path(student.id) %></p>
 <% end %>
