--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,2 +1,6 @@
 <h1> <%= @student.first_name %> <%= @student.surname %> </h1>
 <%= image_tag @student.image_url %>
+
+<hr>
+
+<%= link_to "[Edit]", edit_student_path(@student.id) %>
