--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -4,3 +4,4 @@
 <hr>
 
 <%= link_to "[Edit]", edit_student_path(@student.id) %>
+<%= link_to "[Delete]", student_path(@student.id), method: :delete, data: { confirm: "Are you sure?" } %>
