--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,5 +1,12 @@
 
 <%= form_for @student do |f| %>
+
+<ul>
+  <% @student.errors.full_messages.each do |msg| %>
+  <li><%= msg %></li>
+  <% end %>
+</ul>
+
   <%= f.label :first_name %>
   <%= f.text_field :first_name %>
 
