--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -1,1 +1,7 @@
 <h1> Batch <%= @batch.batch_number %></h1>
+
+<h2>Students</h2>
+
+<% @students.each do |student| %>
+    <p><%= link_to student.first_name, student_path(student.id) %> <%= link_to student.surname, student_path(student.id) %></p>
+<% end %>
