--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <br><br>
     <hr>
 
-    <%= link_to "[All Students]", root_path %>
+    <%= link_to "[All Batches]", root_path %>
 
   </body>
 </html>
