improved link to seperate batches on the batch index page

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Batches</h1>
 
 <% @batches.each do |batch| %>
-    <p>Batch: <%= link_to batch.batch_number, batch_path(batch.id) %></p>
+    <p><%= link_to "Batch ", batch_path(batch.id) %> <%= link_to batch.batch_number, batch_path(batch.id) %></p>
 <% end %>
