--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -3,3 +3,7 @@
 <% @batches.each do |batch| %>
     <p><%= link_to "Batch ", batch_path(batch.id) %> <%= link_to batch.batch_number, batch_path(batch.id) %></p>
 <% end %>
+
+<br>
+
+<%= link_to "[New Student]", new_student_path %>
