--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -6,3 +6,7 @@
 <% @students.each do |student| %>
     <p><%= link_to student.first_name, student_path(student.id) %> <%= link_to student.surname, student_path(student.id) %></p>
 <% end %>
+
+<br>
+
+<%= link_to "[Edit Batch]", edit_batch_path(@batch.id) %>
