make dates in new/update batch form selectable

--- a/app/views/batches/_form.html.erb
+++ b/app/views/batches/_form.html.erb
@@ -10,10 +10,10 @@
   <%= f.number_field :batch_number %>
 
   <%= f.label :start_date %>
-  <%= f.date_field :start_date %>
+  <%= f.date_select :start_date, id: :batch_start_date %>
 
   <%=  f.label :end_date %>
-  <%=  f.date_field :end_date %>
+  <%= f.date_select :start_date, id: :batch_start_date %>
 
 
   <%= f.submit (@batch.new_record? ? "Create" : "Update") %>
