change the students form so only 3 names can be selected - as an experiment

--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -8,7 +8,10 @@
 </ul>
 
   <%= f.label :first_name %>
-  <%= f.text_field :first_name %>
+
+
+<%= f.select(:first_name, options_for_select(["Bert", "Ann", "Marga"])) %>
+
 
   <%= f.label :surname %>
   <%= f.text_field :surname %>
