add button, add link to question/students page

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -6,5 +6,6 @@
 
 <br>
 
+<%= link_to "[Ask Question]", students_path %>
 <%= link_to "[New Batch]", new_batch_path %>
 <%= link_to "[New Student]", new_student_path %>
