--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -8,10 +8,7 @@
 </ul>
 
   <%= f.label :first_name %>
-
-
-<%= f.select(:first_name, options_for_select(["Bert", "Ann", "Marga"])) %>
-
+  <%= f.text_field :first_name %>
 
   <%= f.label :surname %>
   <%= f.text_field :surname %>
