--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -6,4 +6,22 @@
 
 <hr>
 
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">Question (refresh the page)</button>
+
+
+      <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+
+          <div class="modal-content">
+
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title"> <%= @students2[0].first_name %> </h4>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
 <%= link_to "[New Student]", new_student_path %>
