--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -10,6 +10,24 @@
 <br>
 <hr>
 
+<%= form_for @assessment do |f| %>
+
+
+
+  <%= f.label :colour %>
+  <%= f.select(:colour, options_for_select(["Red", "Yellow", "Green"], "Green")) %>
+
+  <%=  f.label :date %>
+  <%= f.date_select :date, id: :assessment_date %>
+
+  <%= f.label :comment %>
+  <%= f.text_area :comment %>
+
+  <%= f.label :student_id %>
+  <%= f.collection_select(:student_id, Student.all, :id, :first_name, {:selected => @student.id}) %>
+
+  <%= f.submit (@assessment.new_record? ? "Create" : "Update") %>
+<% end %>
 
 
 
