add columns to student show page

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,36 +1,61 @@
+
+<div class="container">
+
+<div class="row">
+
+
+<div class="col-md-6">
+
+
+
 <h1> <%= @student.first_name %> <%= @student.surname %> </h1>
 <%= image_tag @student.image_url %>
 <br>
 
 <% @student.assessments.each do |assessment| %>
       <h4><%= assessment.colour %> <%= assessment.date %></h4>
-    <% end %>
-<%= link_to "New Assessment", new_assessment_path %>
+<% end %>
 
-<br>
-<hr>
+
+
+</div>
+
+
+
+<div class="col-md-6">
+
+<h1>Assessment</h1>
 
 <%= form_for @assessment do |f| %>
 
-
-
   <%= f.label :colour %>
   <%= f.select(:colour, options_for_select(["Red", "Yellow", "Green"], "Green")) %>
+<br>
 
   <%=  f.label :date %>
   <%= f.date_select :date, id: :assessment_date %>
-
+<br>
   <%= f.label :comment %>
   <%= f.text_area :comment %>
-
+<br>
   <%= f.label :student_id %>
   <%= f.collection_select(:student_id, Student.all, :id, :first_name, {:selected => @student.id}) %>
-
+<br>
   <%= f.submit (@assessment.new_record? ? "Create" : "Update") %>
 <% end %>
+
+</div>
+</div>
+
+<div class="row">
+<div class="col-md-12">
 
 
 
 
 <%= link_to "[Edit Student]", edit_student_path(@student.id) %>
 <%= link_to "[Delete Student]", student_path(@student.id), method: :delete, data: { confirm: "Are you sure?" } %>
+
+</div>
+</div>
+</div>
