--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -83,7 +83,7 @@
 
       <div class="actions">
 
-        <%= f.submit (@assessment.new_record? ? "Create" : "Update") %>
+        <%= f.submit "Create", class: "btn btn-primary" %>
         <% end %>
 
       </div>
@@ -93,8 +93,8 @@
   <div class="row">
     <div class="col-md-12">
 
-      <%= link_to "[Edit Student]", edit_student_path(@student.id) %>
-      <%= link_to "[Delete Student]", student_path(@student.id), method: :delete, data: { confirm: "Are you sure?" } %>
+      <%= link_to "Edit Student", edit_student_path(@student.id), class: "btn btn-primary" %>
+      <%= link_to "Delete Student", student_path(@student.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
 
     </div>
   </div>
