make links to assessments on student show

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -8,7 +8,8 @@
       <br>
 
       <% @student.assessments.each do |assessment| %>
-            <h4><%= assessment.colour %> <%= assessment.date %></h4>
+      <% assessment_l = "#{assessment.colour} #{assessment.date}" %>
+            <h4><%= link_to assessment_l, assessment_path(assessment.id) %></h4>
       <% end %>
 
     </div>
