--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -1,3 +1,6 @@
-<h1> <%= @assessment.colour %>
+<h1>Assessment</h1>
+
+<h2> <%= @assessment.student_id %></h2>
+<h2> <%= @assessment.colour %>
 <h2> <%= @assessment.comment %></h2>
 <h2> <%= @assessment.date %></h2>
