--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -33,6 +33,6 @@
 
 
 
-<footer> <%= link_to "[Ask Question]", students_path %> <%= link_to "[New Batch]", new_batch_path %> <%= link_to "[New Student]", new_student_path %> </footer>
+<footer> <%= link_to "Ask Question", students_path, class: "btn btn-primary" %> <%= link_to "New Batch", new_batch_path, class: "btn btn-primary" %> <%= link_to "New Student", new_student_path, class: "btn btn-primary" %> </footer>
 
 </div>
