minor changes to batch index and show

--- a/app/views/batches/index.html.erb
+++ b/app/views/batches/index.html.erb
@@ -31,8 +31,8 @@
 
 <div class="row">
 
+<!-- <p><%= link_to "Ask Question", students_path, class: "btn btn-primary" %></p> -->
 
-
-<footer> <%= link_to "Ask Question", students_path, class: "btn btn-primary" %> <%= link_to "New Batch", new_batch_path, class: "btn btn-primary" %> <%= link_to "New Student", new_student_path, class: "btn btn-primary" %> </footer>
+<footer>  <%= link_to "New Batch", new_batch_path, class: "btn btn-primary" %> <%= link_to "New Student", new_student_path, class: "btn btn-primary" %> </footer>
 
 </div>
