--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -2,7 +2,7 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
 
-    <h1 class="panel-title"> Batch <%= @batch.batch_number %></h1>
+    <h1 class="panel-title"> Batch <%= @batch.batch_number %> <%= @batch.start_date %></h1>
 
   </div>
 
@@ -17,8 +17,14 @@
           <h4><%= link_to student_l, student_path(student.id) %></h4>
       <% end %>
 
+<div class="col-md-3 col-md-offset-9">
+
+
+
       <%= link_to "Edit Batch", edit_batch_path(@batch.id), class: "btn btn-primary" %>
       <%= link_to "Delete Batch", batch_path(@batch.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
+
+      </div>
 
   </div>
 </div>
