add name of student to assessment show

--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Assessment</h1>
 
+<h2> <%= @student.first_name %></h2>
+
 <h2> <%= @assessment.student_id %></h2>
 <h2> <%= @assessment.colour %>
 <h2> <%= @assessment.comment %></h2>
