--- a/app/views/batches/show.html.erb
+++ b/app/views/batches/show.html.erb
@@ -22,7 +22,7 @@
 
 
       <%= link_to "Edit Batch", edit_batch_path(@batch.id), class: "btn btn-primary" %>
-      <%= link_to "Delete Batch", batch_path(@batch.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-primary" %>
+      <%= link_to "Delete Batch", batch_path(@batch.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
 
       </div>
 
