--- a/app/views/assessments/show.html.erb
+++ b/app/views/assessments/show.html.erb
@@ -1,8 +1,54 @@
 <h1>Assessment</h1>
 
-<h2> <%= @student.first_name %></h2>
+<div class="panel panel-primary">
+  <div class="panel-heading">
 
-<h2> <%= @assessment.student_id %></h2>
-<h2> <%= @assessment.colour %>
-<h2> <%= @assessment.comment %></h2>
-<h2> <%= @assessment.date %></h2>
+    <h1 class="panel-title"><%= @student.first_name %> <%= @student.surname %></h1>
+
+  </div>
+
+  <div class="panel-body">
+
+
+    <div class="row">
+      <div class="col-md-1">
+
+        <h4>Date:</h4>
+      </div>
+      <div class="col-md-2">
+
+        <h4><%= @assessment.date %></h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1">
+
+        <h4>Colour:</h4>
+      </div>
+      <div class="col-md-2">
+
+        <h4><%= @assessment.colour %></h4>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-1">
+
+        <h4>Comment:</h4>
+      </div>
+      <div class="col-md-2">
+
+        <h4><%= @assessment.comment %></h4>
+      </div>
+    </div>
+
+    <div class="col-md-4 col-md-offset-9">
+
+          <p><%= link_to "Edit Assessment", edit_assessment_path(@assessment.id), class: "btn btn-primary" %>
+          <%= link_to "Delete Assessment", assessment_path(@assessment.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %></p>
+
+    </div>
+
+  </div>
+</div>
