add back buttons to app

--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -94,6 +94,7 @@
   <div class="row">
     <div class="col-md-12">
 
+      <%= link_to 'Back', :back, class:'btn btn-default' %>
       <%= link_to "Edit Student", edit_student_path(@student.id), class: "btn btn-primary" %>
       <%= link_to "Delete Student", student_path(@student.id), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger" %>
 
