--- a/app/views/assessments/_form_asses.html.erb
+++ b/app/views/assessments/_form_asses.html.erb
@@ -1,6 +1,11 @@
 <%= form_for @assessment do |f| %>
 
 
+  <ul>
+    <% @assessment.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
 
   <%= f.label :colour %>
   <%= f.select(:colour, options_for_select(["Red", "Yellow", "Green"])) %>
