--- a/app/views/batches/_form.html.erb
+++ b/app/views/batches/_form.html.erb
@@ -1,20 +1,70 @@
-<%= form_for @batch do |f| %>
 
-<ul>
-  <% @batch.errors.full_messages.each do |msg| %>
-  <li><%= msg %></li>
-  <% end %>
-</ul>
-
-  <%= f.label :batch_number %>
-  <%= f.number_field :batch_number %>
-
-  <%= f.label :start_date %>
-  <%= f.date_select :start_date, id: :batch_start_date %>
-
-  <%=  f.label :end_date %>
-  <%= f.date_select :end_date, id: :batch_end_date %>
+<div class="col-md-6">
 
 
-  <%= f.submit (@batch.new_record? ? "Create" : "Update") %>
-<% end %>
+  <%= form_for @batch do |f| %>
+
+  <ul>
+    <% @batch.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2">
+
+        <%= f.label :batch_number %>
+
+      </div>
+
+      <div class="col-md-2">
+
+        <%= f.number_field :batch_number %>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2">
+
+        <%= f.label :start_date %>
+
+      </div>
+
+      <div class="col-md-9">
+
+        <%= f.date_select :start_date, id: :batch_start_date %>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <div class="row">
+      <div class="col-md-2">
+
+        <%=  f.label :end_date %>
+
+      </div>
+
+      <div class="col-md-9">
+
+        <%= f.date_select :end_date, id: :batch_end_date %>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="actions">
+
+    <%= link_to 'Back', :back, class:'btn btn-default' %>
+    <%= f.submit (@batch.new_record? ? "Create" : "Update"), class: "btn btn-primary" %>
+    <% end %>
+
+
+  </div>
+</div>
